# music_rec

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
admin/: Dockerfile  __init__.py  dependencies.py  main.py
admin-web/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
admin-web/src/: App.vue
admin/api/: auth.py  data.py  interactions.py  scheduler.py  status.py  tracks.py  training.py  users.py
admin/services/: scheduler_service.py  training_service.py
app/: Dockerfile  __init__.py  config.py  database.py  generate_hash.py  main.py  test_updater.py
app/api/: artists.py  auth.py  favorites.py  interactions.py  recommendations.py  tracks.py  users.py
app/core/: dependencies.py  exceptions.py  security.py
app/models/: interaction.py  offline_recommendation.py  tag.py  track.py  track_feature.py  (+2 more)
common/: __init__.py  config.py  database.py
db/: init.sql
docs/: 01_project_overview.md  02_architecture_and_dataflow.md  03_directory_tree_and_file_dictionary.md  04_core_modules_deep_dive.md  05_storage_and_state.md  06_reproduction_and_deployment.md  07_admin_system.md  08_model_versioning.md  System_Documentation_Reproduction_Level.md  db_design.md  detail_design.md  project.md  sys _architecture.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
ml_pipeline/: __init__.py  config.py
record/: 2026-04-16.md
scripts/: check_db.py  debug_svd.py  debug_uid.py  fix_admin.py  import_jamendo.py  init_admin.py  seed_data.py  test_api.py
(+100 files in other folders)
