[project]
name = "music-rec"
version = "1.0.0"
description = "个性化音乐推荐系统 - 融合 DeepFM、SASRec 等前沿推荐算法"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.35",
    "aiomysql>=0.2.0",
    "pymysql>=1.1.1",
    "cryptography>=43.0.0",
    "redis>=5.1.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib>=1.7.4",
    "bcrypt>=4.0.1,<4.1",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "numpy>=1.26.4",
    "pandas>=2.2.2",
    "scikit-learn>=1.5.1",
    "faiss-cpu>=1.13.2",
    "onnxruntime>=1.24.4",
    "pyarrow>=23.0.1",
    "torch>=2.0.0",
    "apscheduler>=3.10,<4.0",
]

[project.optional-dependencies]
ml = [
    "torch>=2.2.0",
    "faiss-cpu>=1.8.0",
    "onnxruntime>=1.17.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]
